bpo-46857: Fix refleak in OSError INIT_ALIAS()

_Py_GetRefTotal() no longer decrements _PySet_Dummy refcount.